--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -28,17 +28,24 @@ spec:
           # Install required packages
           apk --no-cache add kmod pciutils python3 build-base linux-headers git
 
+          # Check if we're running on Amazon Linux 2
+          if [ -f /etc/os-release ] && grep -q "Amazon Linux 2" /etc/os-release; then
+            echo "Running on Amazon Linux 2, installing kernel modules"
+            # Install kernel modules on the host
+            nsenter -t 1 -m -u -i -n -p -- yum install -y kernel-modules-extra || echo "Failed to install kernel-modules-extra"
+          fi
+
           # Check if vfio-pci is already loaded with WC support
           if lsmod | grep -q vfio_pci; then
             echo "vfio-pci module is already loaded"
           else
             echo "Loading vfio and vfio-pci modules"
-            modprobe vfio || echo "Failed to load vfio module"
-            modprobe vfio-pci || echo "Failed to load vfio-pci module"
+            nsenter -t 1 -m -u -i -n -p -- modprobe vfio || echo "Failed to load vfio module"
+            nsenter -t 1 -m -u -i -n -p -- modprobe vfio-pci || echo "Failed to load vfio-pci module"
           fi
 
           # Enable unsafe NOIOMMU mode
-          echo 1 > /sys/module/vfio/parameters/enable_unsafe_noiommu_mode || echo "Failed to enable unsafe NOIOMMU mode"
+          nsenter -t 1 -m -u -i -n -p -- bash -c 'echo 1 > /sys/module/vfio/parameters/enable_unsafe_noiommu_mode' || echo "Failed to enable unsafe NOIOMMU mode"
 
           # Copy DPDK binding script to host
           mkdir -p /host/usr/bin
@@ -66,7 +73,7 @@ spec:
             cd /opt/dpdk/scripts
 
             # Run the patch script to enable Write Combining
-            ./get-vfio-with-wc.sh || echo "Failed to patch vfio-pci for Write Combining"
+            nsenter -t 1 -m -u -i -n -p -- /opt/dpdk/scripts/get-vfio-with-wc.sh || echo "Failed to patch vfio-pci for Write Combining"
           fi
 
           echo "DPDK setup completed successfully."
@@ -81,7 +88,7 @@ spec:
           mountPath: /opt/dpdk
       containers:
       - name: eni-manager
-        image:  ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.0
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix2
         env:
         - name: COMPONENT
           value: "eni-manager"
@@ -145,9 +152,9 @@ spec:
         hostPath:
           path: /
       - name: dpdk-tools
-        hostPath:
-          path: /opt/dpdk
-          type: DirectoryOrCreate
+        configMap:
+          name: dpdk-tools
+          defaultMode: 0755
       - name: sriov-dp-config
         hostPath:
           path: /etc/pcidp
