--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -102,14 +102,14 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix2
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix6
         env:
         - name: COMPONENT
           value: "eni-controller"
         # Users should set this to their preferred AWS region
         # This is a placeholder that should be customized
         - name: AWS_REGION
-          value: "us-west-2"
+          value: "us-east-1"
         # Maximum number of concurrent ENI cleanup operations
         - name: MAX_CONCURRENT_ENI_CLEANUP
           value: "3"
