--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -88,7 +88,7 @@ spec:
           mountPath: /opt/dpdk
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix2
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix6
         env:
         - name: COMPONENT
           value: "eni-manager"
@@ -99,7 +99,7 @@ spec:
             fieldRef:
               fieldPath: spec.nodeName
         - name: AWS_REGION
-          value: "us-west-2"  # Set your AWS region here
+          value: "us-east-1"  # Set your AWS region here
         # DPDK Configuration
         - name: ENABLE_DPDK
           value: "true"  # Enable DPDK device binding
