--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -102,7 +102,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.5d1781a-fix6
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-dpdk-unbinding
         env:
         - name: COMPONENT
           value: "eni-controller"
