Improves ENI interface mapping for DPDK
Refines the logic for mapping ENIs to network interfaces, prioritizing interfaces matching the device index.

Verifies interface existence before reusing mappings and enhances logging for troubleshooting. It falls back to any available interface for DPDK functionality when an exact match is not found, ensuring DPDK functionality.

Updates the manager and ENI manager images in deployment files and adjusts the test NodeENI configuration accordingly.

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -102,7 +102,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-dpdk-unbinding
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-interface-mapping-flexible
         env:
         - name: COMPONENT
           value: "eni-controller"
@@ -116,11 +116,11 @@ spec:
         # Maximum number of concurrent reconciles
         - name: MAX_CONCURRENT_RECONCILES
           value: "1"
-        # Set KUBERNETES_SERVICE_HOST and KUBERNETES_SERVICE_PORT explicitly
-        - name: KUBERNETES_SERVICE_HOST
-          value: "172.20.0.1"
-        - name: KUBERNETES_SERVICE_PORT
-          value: "443"
+        # Let Kubernetes handle service discovery automatically
+        # - name: KUBERNETES_SERVICE_HOST
+        #   value: "172.20.0.1"
+        # - name: KUBERNETES_SERVICE_PORT
+        #   value: "443"
         args:
         - --metrics-addr=:8080
         - --enable-leader-election
