--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -88,7 +88,7 @@ spec:
           mountPath: /opt/dpdk
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-dpdk-unbinding
+        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-interface-mapping-flexible
         env:
         - name: COMPONENT
           value: "eni-manager"
