--- a/deploy/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/deploy/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -87,6 +87,9 @@ spec:
               dpdkResourceName:
                 description: Name of the DPDK resource to use
                 type: string
+              dpdkPCIAddress:
+                description: PCI address of the device to bind to DPDK (e.g., 0000:00:06.0)
+                type: string
             required:
             - nodeSelector
             type: object
@@ -134,6 +137,9 @@ spec:
                       type: string
                     dpdkPCIAddress:
                       description: PCI address of the ENI when bound to DPDK
+                      type: string
+                    dpdkResourceName:
+                      description: Resource name used for the DPDK interface in SRIOV device plugin
                       type: string
                   type: object
                 type: array
