Add DPDK enablement check for NodeENI attachments
Skip DPDK binding process when EnableDPDK is false in NodeENI spec.

This change adds a condition to check if DPDK is enabled for a NodeENI
before attempting to bind an ENI attachment to DPDK. Previously, the code
would attempt DPDK binding regardless of the EnableDPDK setting.

Added test configurations demonstrating both enabled and disabled DPDK
scenarios with PCI address specifications. Updated container image
references to point to the fixed version.

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -88,7 +88,7 @@ spec:
           mountPath: /opt/dpdk
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-interface-mapping-flexible
+        image: johnlam90/aws-multi-eni-controller:sandbox-dpdk-sriov-pci-fix
         env:
         - name: COMPONENT
           value: "eni-manager"
