--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -102,7 +102,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:beta.sandbox-dpdk-sriov.fix-interface-mapping-flexible
+        image: johnlam90/aws-multi-eni-controller:sandbox-dpdk-sriov-pci-fix
         env:
         - name: COMPONENT
           value: "eni-controller"
