--- a/.github/workflows/docker-build-beta.yml
+++ b/.github/workflows/docker-build-beta.yml
@@ -7,6 +7,7 @@ on:
       - 'beta-*'
       - 'feature-*'
       - 'dev-*'
+      - 'fix*'
   # Allow manual triggering with branch input
   workflow_dispatch:
     inputs:
