Add fix* branch pattern to beta workflow triggers
This change allows branches with names starting with "fix" to trigger the beta Docker build workflow, expanding the existing patterns that include beta, feature, and dev prefixes.

--- a/.github/workflows/docker-build-beta.yml
+++ b/.github/workflows/docker-build-beta.yml
@@ -7,7 +7,7 @@ on:
       - 'beta-*'
       - 'feature-*'
       - 'dev-*'
-      - 'fix*'
+      - 'fix/*'
   # Allow manual triggering with branch input
   workflow_dispatch:
     inputs:
