Enhance DPDK module loading and verification
Improves reliability of DPDK setup in the ENI manager daemonset by:

- Adding robust module verification with detailed diagnostics
- Creating helper functions to check module loading status
- Adding comprehensive environment verification with detailed error reporting
- Mounting host modules directory to ensure module availability
- Updating container image to v1.2.10-dpdk-reboot-fix
- Changing nodeSelector to target node group instead of specific hostname
- Enabling DPDK in test configuration

These changes help diagnose and resolve issues with DPDK module loading,
particularly after node reboots or when modules are missing.

--- a/test-nodeeni-dpdk-pci.yaml
+++ b/test-nodeeni-dpdk-pci.yaml
@@ -4,7 +4,7 @@ metadata:
   name: test-nodeeni-dpdk-pci-1
 spec:
   nodeSelector:
-    kubernetes.io/hostname: ip-10-0-2-54.ec2.internal
+    ng: multi-eni
   subnetIDs:
     - subnet-08c2ddc07218f1105
   securityGroupIDs:
@@ -14,12 +14,12 @@ spec:
   deviceIndex: 2
   deleteOnTermination: true
   mtu: 9001
-  enableDPDK: false
+  enableDPDK: true
   # DPDK is explicitly disabled
-  # dpdkDriver: "vfio-pci"
-  # dpdkResourceName: "intel.com/sriov"
-  # # Specify the PCI address of the device to bind to DPDK
-  # dpdkPCIAddress: "0000:00:07.0"
+  dpdkDriver: "vfio-pci"
+  dpdkResourceName: "intel.com/sriov"
+  # Specify the PCI address of the device to bind to DPDK
+  dpdkPCIAddress: "0000:00:07.0"
 ---
 apiVersion: networking.k8s.aws/v1alpha1
 kind: NodeENI
@@ -27,7 +27,7 @@ metadata:
   name: test-nodeeni-dpdk-pci-2
 spec:
   nodeSelector:
-    kubernetes.io/hostname: ip-10-0-2-54.ec2.internal
+    ng: multi-eni
   subnetNames:
     - multus-test-subnet-2
   securityGroupNames:
@@ -37,9 +37,9 @@ spec:
   deviceIndex: 3
   deleteOnTermination: true
   mtu: 9001
-  enableDPDK: false
+  enableDPDK: true
   # DPDK is now enabled with all our robustness improvements including graceful handling of missing PCI devices
-  # dpdkDriver: "vfio-pci"
-  # dpdkResourceName: "intel.com/sriov"
-  # # Specify the PCI address of the device to bind to DPDK
-  # dpdkPCIAddress: "0000:00:08.0"
+  dpdkDriver: "vfio-pci"
+  dpdkResourceName: "intel.com/sriov"
+  # Specify the PCI address of the device to bind to DPDK
+  dpdkPCIAddress: "0000:00:08.0"
