Add fix/* branch pattern to CI workflow triggers
Extends the GitHub Actions workflow configuration to run tests when
branches with the 'fix/' prefix are pushed, ensuring code quality
checks are performed on bugfix branches.

--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -11,6 +11,7 @@ on:
       - 'beta-*'
       - 'feature-*'
       - 'dev-*'
+      - 'fix/*'
   pull_request:
     branches: [ main ]
   # Allow manual triggering
