Add comprehensive test infrastructure and mock clients
Enhances the testing capabilities of the AWS Multi-ENI Controller by:

- Adding unit tests with mock implementations for AWS EC2 client
- Creating integration tests that can use real AWS credentials
- Implementing end-to-end tests for full system validation
- Adding test helpers and utilities for consistent test patterns
- Adding a test README with documentation for running different test types

Updates the Makefile with specialized test targets for different test scenarios
and modifies the CI workflow to use the -short flag to run only unit tests
in the pipeline.

--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -47,7 +47,7 @@ jobs:
         run: go build -v ./...
 
       - name: Run unit tests
-        run: go test -v ./pkg/... -coverprofile=coverage.txt -covermode=atomic
+        run: go test -v ./pkg/... -short -coverprofile=coverage.txt -covermode=atomic
 
       - name: Display test coverage
         run: go tool cover -func=coverage.txt
