--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -5,7 +5,7 @@
 # Image configuration
 image:
   repository: johnlam90/aws-multi-eni-controller
-  tag: sandbox-dpdk-sriov-pci-fix
+  tag: v1.2.10-dpdk-reboot-fix
   pullPolicy: IfNotPresent
 
 # Namespace to deploy the controller
