--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -102,7 +102,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:v1.2.11-refactored
+        image: johnlam90/aws-multi-eni-controller:v1.2.10-dpdk-reboot-fix
         env:
         - name: COMPONENT
           value: "eni-controller"
