--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -160,7 +160,7 @@ spec:
           readOnly: true
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:v1.2.10-dpdk-reboot-fix
+        image: johnlam90/aws-multi-eni-controller:v1.2.10-code-org
         env:
         - name: COMPONENT
           value: "eni-manager"
