Add documentation files to gitignore
Adds several documentation and improvement tracking files to .gitignore:
- CODE_ORGANIZATION_IMPROVEMENTS.md
- CODE_REVIEW_OPTIMIZATIONS.md
- README_IMPROVEMENTS.md
- .gitignore (to prevent recursive gitignore issues)

These files contain internal notes and improvement plans that shouldn't be tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ temp/
 .env
 .envrc
 .augment-guidelines
+CODE_ORGANIZATION_IMPROVEMENTS.md
+CODE_REVIEW_OPTIMIZATIONS.md
+.gitignore
+README_IMPROVEMENTS.md
