Organize repository: Move YAML files to appropriate directories

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ CODE_ORGANIZATION_IMPROVEMENTS.md
 CODE_REVIEW_OPTIMIZATIONS.md
 .gitignore
 README_IMPROVEMENTS.md
+PERFORMANCE_OPTIMIZATIONS_IMPLEMENTED.md
