--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.3.1"
-appVersion: "v1.3.1"
+version: "1.3.2"
+appVersion: "v1.3.2"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -15,12 +15,15 @@ keywords:
   - eni
   - kubernetes
   - networking
+  - dpdk
+  - security
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Update version to v1.3.1
-    - Add dpdkPCIAddress field to NodeENI CRD for direct device targeting
-    - Fix DPDK binding logic to respect enableDPDK field
-    - Improve DPDK device binding reliability by using PCI addresses
-    - Fix issue with DPDK binding when enableDPDK is false
-    - Enhance DPDK status tracking in NodeENI resources
+    - Update version to v1.3.2
+    - Add OpenSSF Best Practices Badge compliance with security policy
+    - Enhance contribution guidelines with detailed coding standards
+    - Add comprehensive DPDK support for high-performance networking
+    - Implement automated dependency management with Dependabot
+    - Establish formal vulnerability reporting process
+    - Add test policy documentation and coverage requirements
