Update container images and documentation for v1.3.2 release
- Update all container image references to ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.2
- Update Helm chart values.yaml with correct image repository and tag
- Update deployment manifests with new image references
- Enhance DPDK documentation with current implementation details:
  - Add dpdkPCIAddress field documentation
  - Update troubleshooting section with practical commands
  - Add best practices and current features sections
  - Improve configuration examples and resource naming conventions
- Update all documentation files with v1.3.2 version references
- Ensure consistency across Helm charts, deployment manifests, and docs

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: v1.2.10-dpdk-reboot-fix
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: v1.3.2
   pullPolicy: IfNotPresent
 
 # Namespace to deploy the controller
