Add ConfigMap integration for DPDK tools
- Create Helm chart ConfigMap template for DPDK tools
- Include complete dpdk-devbind.py script (751 lines) in ConfigMap
- Update Helm chart manager-daemonset.yaml to use ConfigMap instead of hostPath
- Fix conditional checks to use .Values.eniManager.dpdk.enabled
- Update deployment documentation to include ConfigMap deployment steps
- Add comprehensive ConfigMap documentation explaining purpose and contents
- Ensure ConfigMap is mounted with correct permissions (0755) at /opt/dpdk

This ensures DPDK functionality works consistently across both standalone
deployment manifests and Helm chart deployments.

--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -87,7 +87,7 @@ spec:
           mountPath: /host/proc
         - name: host-run
           mountPath: /host/run
-        {{- if .Values.eniManager.dpdk }}
+        {{- if .Values.eniManager.dpdk.enabled }}
         - name: dpdk-tools
           mountPath: /opt/dpdk
         - name: sriov-dp-config
@@ -103,11 +103,11 @@ spec:
       - name: host-run
         hostPath:
           path: /run
-      {{- if .Values.eniManager.dpdk }}
+      {{- if .Values.eniManager.dpdk.enabled }}
       - name: dpdk-tools
-        hostPath:
-          path: /opt/dpdk
-          type: DirectoryOrCreate
+        configMap:
+          name: dpdk-tools
+          defaultMode: 0755
       - name: sriov-dp-config
         hostPath:
           path: /etc/pcidp
