--- a/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -3,6 +3,8 @@ kind: CustomResourceDefinition
 metadata:
   name: nodeenis.networking.k8s.aws
 spec:
+  conversion:
+    strategy: None
   group: networking.k8s.aws
   names:
     kind: NodeENI
