--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,7 +4,7 @@
 
 # Image configuration
 image:
-  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  repository: johnlam90/aws-multi-eni-controller
   tag: v1.3.2
   pullPolicy: IfNotPresent
 
