Enhance ENI cleanup with robust error handling and recovery
Implements comprehensive improvements to the ENI cleanup process:

- Adds circuit breaker pattern to prevent cascading failures during AWS API issues
- Implements atomic DPDK unbinding with rollback capability for partial failures
- Adds coordinated operations to prevent race conditions in parallel cleanups
- Implements cleanup timeout mechanism to prevent stuck finalizers
- Enhances stale ENI detection with AWS instance verification
- Adds detailed metrics and structured logging for observability

These changes significantly improve the controller's resilience to failures during cleanup operations, preventing resource leaks and ensuring proper cleanup even in adverse conditions.

Updates controller version to v1.4.0-enhanced-cleanup.

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -5,7 +5,7 @@
 # Image configuration
 image:
   repository: johnlam90/aws-multi-eni-controller
-  tag: v1.3.2-sriov-driver-fix
+  tag: v1.4.0-enhanced-cleanup
   pullPolicy: IfNotPresent
 
 # Namespace to deploy the controller
