--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ CODE_REVIEW_OPTIMIZATIONS.md
 .gitignore
 README_IMPROVEMENTS.md
 PERFORMANCE_OPTIMIZATIONS_IMPLEMENTED.md
+sample-configuration-action-plan.md
