--- a/charts/aws-multi-eni-controller/templates/rbac.yaml
+++ b/charts/aws-multi-eni-controller/templates/rbac.yaml
@@ -112,6 +112,34 @@ rules:
   - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: eni-controller-sriov-manager
+  labels:
+    app.kubernetes.io/name: aws-multi-eni-controller
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - delete
+  resourceNames: []
+- apiGroups:
+  - apps
+  resources:
+  - daemonsets
+  verbs:
+  - get
+  - list
+  - patch
+  resourceNames: []
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: eni-controller-pod-reader
@@ -127,5 +155,22 @@ subjects:
 roleRef:
   kind: Role
   name: eni-controller-pod-reader
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: eni-controller-sriov-manager-binding
+  labels:
+    app.kubernetes.io/name: aws-multi-eni-controller
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.serviceAccount.name }}
+  namespace: {{ .Values.namespace }}
+roleRef:
+  kind: ClusterRole
+  name: eni-controller-sriov-manager
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
