--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -5,7 +5,7 @@
 # Image configuration
 image:
   repository: johnlam90/aws-multi-eni-controller
-  tag: v1.4.0-bash-fix
+  tag: v1.3.3-cloud-native-sriov-fixed
   pullPolicy: IfNotPresent
 
 # Namespace to deploy the controller
