Optimize SR-IOV device plugin restarts
Adds intelligent detection of SR-IOV configuration changes to avoid unnecessary device plugin restarts. The controller now only restarts the SR-IOV device plugin when actual configuration changes are detected.

Key improvements:
- Implements deep comparison of SR-IOV configurations before and after updates
- Adds utility functions for deep copying and comparing SR-IOV configurations
- Updates container image to use GHCR with beta-latest tag and Always pull policy
- Includes comprehensive test cases to verify restart behavior

This change reduces potential disruption to workloads by minimizing unnecessary device plugin restarts.

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,9 +4,9 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: v1.3.3-cloud-native-sriov-fixed
-  pullPolicy: IfNotPresent
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: beta-latest
+  pullPolicy: Always
 
 # Namespace to deploy the controller
 namespace: eni-controller-system
