Improve SRIOV device plugin config with change detection
Replace updateSRIOVDevicePluginConfig with updateModernSRIOVDevicePluginConfig
to implement change detection for SR-IOV device plugin configuration updates.
This ensures the SR-IOV device plugin only restarts when configuration actually
changes, reducing unnecessary service disruptions.

Also adds the eni-manager directory to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ CODE_REVIEW_OPTIMIZATIONS.md
 README_IMPROVEMENTS.md
 PERFORMANCE_OPTIMIZATIONS_IMPLEMENTED.md
 sample-configuration-action-plan.md
+eni-manager
