--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -5,7 +5,7 @@
 # Image configuration
 image:
   repository: ghcr.io/johnlam90/aws-multi-eni-controller
-  tag: beta-83b202e
+  tag: beta-fix-srio-plugin-restart
   pullPolicy: Always
 
 # Namespace to deploy the controller
