Refactor ENI manager with improved SR-IOV handling
Refactors the NodeENI updater loop into smaller, more maintainable functions
with improved state management and error handling. Key improvements include:

- Adds robust SR-IOV configuration cleanup for deleted NodeENI resources
- Implements minimal SR-IOV config to prevent device plugin crashes
- Improves device plugin restart verification with better error handling
- Adds detection of active NodeENI resources for DPDK resource management
- Updates metrics implementation with singleton pattern to prevent duplicates

The changes make the codebase more maintainable while enhancing reliability
of SR-IOV device handling during ENI lifecycle events.

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -160,7 +160,7 @@ spec:
           readOnly: true
       containers:
       - name: eni-manager
-        image: ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.3
+        image: johnlam90/aws-multi-eni-controller:v1.3.3-fix-sriov-empty-config
         env:
         - name: COMPONENT
           value: "eni-manager"
