Improve SR-IOV device plugin management with change detection
Enhances the SR-IOV and DPDK management with intelligent change detection to avoid unnecessary device plugin restarts:

- Adds configuration comparison logic to detect actual changes before restarting device plugins
- Implements resource version tracking to skip processing when NodeENI resources haven't changed
- Optimizes cleanup process to only restart device plugin when configuration is modified
- Refactors ENI Manager into modular packages for better maintainability

Updates version to v1.3.4 across all components and documentation.

--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.3.3"
-appVersion: "v1.3.3"
+version: "1.3.4"
+appVersion: "v1.3.4"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -20,7 +20,8 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Update version to v1.3.3
+    - Update version to v1.3.4
+    - Complete modular architecture refactoring from monolithic design
     - Implement cloud-native SR-IOV device plugin restart functionality
     - Replace kubectl dependency with native Kubernetes API calls
     - Add comprehensive RBAC permissions for pod management
@@ -28,3 +29,5 @@ annotations:
     - Support multiple SR-IOV device plugin naming conventions
     - Add timeout protection and improved error handling
     - Add performance testing framework for enterprise-scale deployments
+    - Refactor ENI Manager from 6700+ lines to modular packages
+    - Improve code maintainability and testability
