--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -173,7 +173,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.3
+        image: johnlam90/aws-multi-eni-controller:v1.3.4
         env:
         - name: COMPONENT
           value: "eni-controller"
